Fixed problem with leaderboard missing medal icons. Possibly fixed problem with name overflow.

--- a/trunk/frontend/html/include/css/forms/worldclass/leaderBoard.scss
+++ b/trunk/frontend/html/include/css/forms/worldclass/leaderBoard.scss
@@ -50,6 +50,7 @@
 					left: 4%;
 					width: 50%;
 					font-weight: bold;
+					text-overflow: ellipse;
 					overflow: hidden;
 				}
 				.form1 {
